// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add .gitignore 1`] = `
Object {
  "/.gitignore": "node_modules/
.DS_Store
Thumbs.db
.idea/
.vscode/
*.sublime-project
*.sublime-workspace
*.log",
}
`;

exports[`should add package-lock.json and pnpm-lock.yaml, if yarn.lock exists 1`] = `
Object {
  "/.gitignore": "node_modules/
.DS_Store
Thumbs.db
.idea/
.vscode/
*.sublime-project
*.sublime-workspace
*.log
package-lock.json
pnpm-lock.yaml",
  "/yarn.lock": "",
}
`;

exports[`should add yarn.lock and pnpm-lock.yaml, if package-lock.json exists 1`] = `
Object {
  "/.gitignore": "node_modules/
.DS_Store
Thumbs.db
.idea/
.vscode/
*.sublime-project
*.sublime-workspace
*.log
yarn.lock
pnpm-lock.yaml",
  "/package-lock.json": "",
}
`;

exports[`should add package-lock.json and yarn.lock, if pnpm-lock.yaml exists 1`] = `
Object {
  "/.gitignore": "node_modules/
.DS_Store
Thumbs.db
.idea/
.vscode/
*.sublime-project
*.sublime-workspace
*.log
yarn.lock
package-lock.json",
  "/pnpm-lock.yaml": "",
}
`;
